# FaceLivenessDetection-Linux

./: Dockerfile  README.md
cpp/: CMakeLists.txt  main.cpp  miniai_liveness.h
flask/: app.py
gradio/: app.py
python/: check_liveness.py  main.py  miniai_liveness.py
